feat(evaclub-platinum): add platinum-palco modal
