# evaclub-ui/src/app/services/models/box-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface BoxRequest {
+  boxId?: number;
+  number: string;
+  status: string;
+  zoneId: number;
+}
