# evaclub-ui/src/app/services/models/box-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface BoxResponse {
+  boxId?: number;
+  number?: string;
+  status?: string;
+  zoneId?: number;
+}
