# evaclub-ui/src/app/services/models/page-response-box-response.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+import { BoxResponse } from '../models/box-response';
+export interface PageResponseBoxResponse {
+  content?: Array<BoxResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
