# evaclub-ui/src/app/services/models/zone-request.ts
@@ -1,9 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface ZoneRequest {
+  columns: number;
   eventId: number;
   id?: number;
   name: string;
   price: number;
-  rows: number;
 }
